- added headless + mem JAVA_OPTS
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@5366 dd235d61-e4b4-4fb3-b1fb-b81c2defcbc9